test-data/negative/invalid_top_level.aadl
-- ERROR: Top level must start with 'package' or 'property set'
system invalid_start
end invalid_start;
